--- a/index.html
+++ b/index.html
@@ -22,90 +22,138 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-dark p-0">
-			<div class="container">
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
+		<nav class="container">
+			<div class="row" style="padding-inline: 15px;">
+				<div class="col-4 d-none d-sm-flex align-items-center p-0">
+					<a class="mr-2 d-none d-lg-block" href="#" style="text-decoration: none; color: black;">
+						<img style="width: 2rem;" src="./assets/icons/cuidateplus.svg">
+						<span class="font-weight-bold" style="font-size: 0.75rem;">CuidatePlus</span>
+					</a>
+					<a class="d-none d-lg-block" href="#" style="text-decoration: none; color: black;">
+						<img style="width: 2rem;" src="./assets/icons/trending.svg">
+						<span class="font-weight-bold" style="font-size: 0.75rem;">Lo + trending</span>
+					</a>
+					<button class="btn d-lg-none btn-login py-1">Iniciar sesión</button>
+				</div>
+				<div class="col-12 col-sm-4 p-0">
+					<a class="d-flex align-items-center justify-content-center mx-auto" style="height: 4rem;">
+						<img style="width: 90%; max-width: 12rem; object-fit: cover; object-position: center;"
+							src="./assets/brand.jpg">
+					</a>
+				</div>
+				<div class="col-4 d-none d-sm-flex align-items-center p-0 justify-content-end">
+					<select class="form-control mr-2" style="width: 5rem; font-size: 0.875rem;">
+						<option>MX</option>
+						<option>ES</option>
+					</select>
+					<button class="btn btn-subscribe text-white py-1 mr-lg-2">Suscribete</button>
+					<button class="btn d-none d-lg-block btn-login py-1 fs-md-1">Iniciar sesión</button>
+				</div>
+			</div>
+		</nav>
+		<nav class="navbar navbar-expand-lg navbar-dark py-2 p-lg-0 px-0">
+			<div style="width:100%;">
+				<div class="container">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+				</div>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">
-								Fútbol
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<div class="dropdown-submenu">
-									<span class="dropwdown-submenu-header">México</span>
-									Liga MX
-									Calendario - AperturaPosiciones - AperturaCalendario - ClausuraPosiciones - ClausuraPorcentajeLiga de
-									Expansión MX
-									Calendario - AperturaPosiciones - AperturaPosiciones - ClausuraCalendario - ClausuraCopa MX
-									Calendario - AperturaCalendario - ClausuraConcachampions
-									CalendarioMexicanos por el mundoFútbol Femenil
-									<a class="dropdown-item" href="#">Action</a>
-									<a class="dropdown-item" href="#">Another action</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</div>
-								<div class="dropdown-submenu">
-									<a class="dropdown-item" href="#">Action</a>
-									<a class="dropdown-item" href="#">Another action</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</div>
-								<div class="dropdown-submenu">
-									<a class="dropdown-item" href="#">Action</a>
-									<a class="dropdown-item" href="#">Another action</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#">Something else here</a>
-								</div>
+						<div class="bg-wrapper">
+							<div class="container">
+								<li class="nav-item dropdown mt-lg-0 mt-2">
+									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+										aria-haspopup="true" aria-expanded="false">
+										Fútbol
+									</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<div class="dropdown-submenu">
+											<span class="dropwdown-submenu-header">México</span>
+											Liga MX
+											Calendario - AperturaPosiciones - AperturaCalendario - ClausuraPosiciones - ClausuraPorcentajeLiga
+											de
+											Expansión MX
+											Calendario - AperturaPosiciones - AperturaPosiciones - ClausuraCalendario - ClausuraCopa MX
+											Calendario - AperturaCalendario - ClausuraConcachampions
+											CalendarioMexicanos por el mundoFútbol Femenil
+											<a class="dropdown-item" href="#">Action</a>
+											<a class="dropdown-item" href="#">Another action</a>
+											<div class="dropdown-divider"></div>
+											<a class="dropdown-item" href="#">Something else here</a>
+										</div>
+										<div class="dropdown-submenu">
+											<a class="dropdown-item" href="#">Action</a>
+											<a class="dropdown-item" href="#">Another action</a>
+											<div class="dropdown-divider"></div>
+											<a class="dropdown-item" href="#">Something else here</a>
+										</div>
+										<div class="dropdown-submenu">
+											<a class="dropdown-item" href="#">Action</a>
+											<a class="dropdown-item" href="#">Another action</a>
+											<div class="dropdown-divider"></div>
+											<a class="dropdown-item" href="#">Something else here</a>
+										</div>
+									</div>
+								</li>
 							</div>
-						</li>
-
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">
-								Fútbol Internacional
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Action</a>
-								<a class="dropdown-item" href="#">Another action</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+						<div class="bg-wrapper">
+							<div class="container">
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+										aria-haspopup="true" aria-expanded="false">
+										Fútbol Internacional
+									</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="#">Action</a>
+										<a class="dropdown-item" href="#">Another action</a>
+										<div class="dropdown-divider"></div>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</div>
+								</li>
 							</div>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">
-								Motor
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Action</a>
-								<a class="dropdown-item" href="#">Another action</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+						<div class="bg-wrapper">
+							<div class="container">
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+										aria-haspopup="true" aria-expanded="false">
+										Motor
+									</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="#">Action</a>
+										<a class="dropdown-item" href="#">Another action</a>
+										<div class="dropdown-divider"></div>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</div>
+								</li>
 							</div>
-						</li>
-
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-								aria-haspopup="true" aria-expanded="false">
-								Otros deportes
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Action</a>
-								<a class="dropdown-item" href="#">Another action</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+						<div class="bg-wrapper">
+							<div class="container">
+								<li class="nav-item dropdown mb-lg-0 mb-2">
+									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+										aria-haspopup="true" aria-expanded="false">
+										Otros deportes
+									</a>
+									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+										<a class="dropdown-item" href="#">Action</a>
+										<a class="dropdown-item" href="#">Another action</a>
+										<div class="dropdown-divider"></div>
+										<a class="dropdown-item" href="#">Something else here</a>
+									</div>
+								</li>
 							</div>
-						</li>
+						</div>
 					</ul>
-					<form class="form-inline d-flex align-items-center">
-						<input class="form-control rounded-0 search-input" type="search" placeholder="Buscar en marca.com"
-							aria-label="Search">
-					</form>
+					<div class="container">
+						<form class="form-inline d-flex align-items-center justify-content-end">
+							<input class="form-control rounded-0 search-input" type="search" placeholder="Buscar en marca.com"
+								aria-label="Search">
+						</form>
+					</div>
 				</div>
 			</div>
 		</nav>
