Progress: there are now cards, with images.
new file: images - store images there.
empty section before cards, for carousel.

co-authored-by: CZamora5 <czamora5@ucol.mx>

--- a/index.html
+++ b/index.html
@@ -183,33 +183,52 @@
 		</div>
 	</header>
 
+	<section class="container"></section>
+
 	<section class="container">
 		<div class="row">
-			<div class="col">
-				<div class="card" style="width: 18rem;">
-					<img class="card-img-top" src="./images/images.png" alt="Img1">
+			<div class="col-12 col-md-9">
+				<div class="card m-0 m-md-1" >
+					<img class="card-img-top" src="./assets/images/img1.jpg" alt="Img1">
 					<div class="card-body">
-						<h5 class="card-title">lllllllllllllllll</h5>
-						<p class="card-text">AAAAAAAA</p>
-						<a href="#" class="text-dark">LLLLLLLLLLLLLLLLLLLLLLLL</a>
+						<p class="card-title text-danger">Rata conchesumare</p>
+						<a href="#" class="text-dark"><h1>Ir a mamitas puebla</h1></a>
 					</div>
 				</div>
 			</div>
-			<div class="col">
 
-			</div>
-			<div class="col">
-
+			<div class="col-12 col-md-3">
+				<div class="card m-0 m-md-1" style="width: 20rem;" >
+					<img class="card-img-top" style="width: auto; height: 7rem;" src="./assets/images/IMG2.jpg" alt="Img1">
+					<div class="card-body">
+						<p class="card-title text-danger">AA</p>
+						<a href="#" class="text-dark"><h1>UU</h1></a>
+					</div>
+				</div>
+				<div class="card m-0 m-md-1" style="width: 20rem;" >
+					<img class="card-img-top" style="width: auto; height: 7rem;" src="./assets/images/img3.jpg" alt="Img1">
+					<div class="card-body">
+						<p class="card-title text-danger">UU</p>
+						<a href="#" class="text-dark"><h1>RR</h1></a>
+					</div>
+				</div>
+				<div class="card m-0 m-md-1" style="width: 20rem;" >
+					<img class="card-img-top" style="width: auto; height: 7rem;" src="./assets/images/img4.jpg" alt="Img1">
+					<div class="card-body">
+						<p class="card-title text-danger">UU</p>
+						<a href="#" class="text-dark"><h1>RR</h1></a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
+	
 	<section class="container"></section>
 	<section class="container"></section>
 	<section class="container"></section>
 	<section class="container"></section>
 	<section class="container"></section>
 
-	<h1>Hello world!</h1>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
