style: modify card design

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 	<section class="container"></section>
 
-	<section class="container">
+	<section class="container py-3">
 		<div class="row">
 			<div class="col-12 col-md-9">
 				<div class="card m-0 m-md-1" >
@@ -197,24 +197,24 @@
 				</div>
 			</div>
 
-			<div class="col-12 col-md-3">
-				<div class="card m-0 m-md-1" style="width: 20rem;" >
-					<img class="card-img-top" style="width: auto; height: 7rem;" src="./assets/images/IMG2.jpg" alt="Img1">
-					<div class="card-body">
+			<div class="col-12 col-md-3 d-flex flex-column">
+				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1"style="background-color: #f5f7fa" >
+					<img class="card-img-top order-2 align-self-center" style="width: 40%; height: auto;" src="./assets/images/IMG2.jpg" alt="Img1">
+					<div class="card-body p-0 mr-1">
 						<p class="card-title text-danger">AA</p>
 						<a href="#" class="text-dark"><h1>UU</h1></a>
 					</div>
 				</div>
-				<div class="card m-0 m-md-1" style="width: 20rem;" >
-					<img class="card-img-top" style="width: auto; height: 7rem;" src="./assets/images/img3.jpg" alt="Img1">
-					<div class="card-body">
+				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa" >
+					<img class="card-img-top order-2 align-self-center" style="width: 40%; height: auto;" src="./assets/images/img3.jpg" alt="Img1">
+					<div class="card-body p-0 mr-1">
 						<p class="card-title text-danger">UU</p>
 						<a href="#" class="text-dark"><h1>RR</h1></a>
 					</div>
 				</div>
-				<div class="card m-0 m-md-1" style="width: 20rem;" >
-					<img class="card-img-top" style="width: auto; height: 7rem;" src="./assets/images/img4.jpg" alt="Img1">
-					<div class="card-body">
+				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa" >
+					<img class="card-img-top order-2 align-self-center" style="width: 40%; height: auto;" src="./assets/images/img4.jpg" alt="Img1">
+					<div class="card-body p-0 mr-1">
 						<p class="card-title text-danger">UU</p>
 						<a href="#" class="text-dark"><h1>RR</h1></a>
 					</div>
