Progress: card sizes, fonts, section border
co-authored-by: Czamora5 <czamora5@ucol.mx>

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -183,11 +184,10 @@
 		</div>
 	</header>
 
-	<section class="container"></section>
 
-	<section class="container py-3">
+	<section class="container-fluid py-3 border-top mt-3" style="border-width: 0.125rem !important;">
 		<div class="row">
-			<div class="col-12 col-md-9">
+			<div class="col-12 col-md-8">
 				<div class="card m-0 m-md-1" >
 					<img class="card-img-top" src="./assets/images/img1.jpg" alt="Img1">
 					<div class="card-body">
@@ -197,26 +197,26 @@
 				</div>
 			</div>
 
-			<div class="col-12 col-md-3 d-flex flex-column">
+			<div class="col-12 col-md-4 d-flex flex-column">
 				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1"style="background-color: #f5f7fa" >
-					<img class="card-img-top order-2 align-self-center" style="width: 40%; height: auto;" src="./assets/images/IMG2.jpg" alt="Img1">
+					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;" src="./assets/images/IMG2.jpg" alt="Img1">
 					<div class="card-body p-0 mr-1">
-						<p class="card-title text-danger">AA</p>
-						<a href="#" class="text-dark"><h1>UU</h1></a>
+						<p class="card-title text-danger font-weight-bold text-uppercase" style="font-size: 0.875rem; font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección Mexicana</p>
+						<a href="#" class="text-dark" ><h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5></a>
 					</div>
 				</div>
 				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa" >
-					<img class="card-img-top order-2 align-self-center" style="width: 40%; height: auto;" src="./assets/images/img3.jpg" alt="Img1">
+					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;" src="./assets/images/img3.jpg" alt="Img1">
 					<div class="card-body p-0 mr-1">
-						<p class="card-title text-danger">UU</p>
-						<a href="#" class="text-dark"><h1>RR</h1></a>
+						<p class="card-title text-danger font-weight-bold text-uppercase" style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección Mexicana</p>
+						<a href="#" class="text-dark" ><h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5></a>
 					</div>
 				</div>
 				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa" >
-					<img class="card-img-top order-2 align-self-center" style="width: 40%; height: auto;" src="./assets/images/img4.jpg" alt="Img1">
+					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;" src="./assets/images/img4.jpg" alt="Img1">
 					<div class="card-body p-0 mr-1">
-						<p class="card-title text-danger">UU</p>
-						<a href="#" class="text-dark"><h1>RR</h1></a>
+						<p class="card-title text-danger font-weight-bold text-uppercase" style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección Mexicana</p>
+						<a href="#" class="text-dark" ><h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5></a>
 					</div>
 				</div>
 			</div>
