addition: max-width to container

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	</header>
 
 
-	<section class="container-fluid py-3 border-top mt-3" style="border-width: 0.125rem !important;">
+	<section class="container-fluid py-3 border-top mt-3" style="border-width: 0.125rem !important; max-width: 1140px;">
 		<div class="row">
 			<div class="col-12 col-md-8">
 				<div class="card m-0 m-md-1" >
