--- a/index.html
+++ b/index.html
@@ -60,41 +60,51 @@
 						<span class="navbar-toggler-icon"></span>
 					</button>
 				</div>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<div class="collapse navbar-collapse position-relative" id="navbarSupportedContent">
 					<ul class="navbar-nav mr-auto">
 						<div class="bg-wrapper">
 							<div class="container">
-								<li class="nav-item dropdown mt-lg-0 mt-2">
+								<li class="nav-item dropdown mt-lg-0 mt-2 position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
 										Fútbol
 									</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<div class="dropdown-menu mb-3 flex-column flex-sm-row" aria-labelledby="navbarDropdown">
 										<div class="dropdown-submenu">
-											<span class="dropwdown-submenu-header">México</span>
-											Liga MX
-											Calendario - AperturaPosiciones - AperturaCalendario - ClausuraPosiciones - ClausuraPorcentajeLiga
-											de
-											Expansión MX
-											Calendario - AperturaPosiciones - AperturaPosiciones - ClausuraCalendario - ClausuraCopa MX
-											Calendario - AperturaCalendario - ClausuraConcachampions
-											CalendarioMexicanos por el mundoFútbol Femenil
-											<a class="dropdown-item" href="#">Action</a>
-											<a class="dropdown-item" href="#">Another action</a>
-											<div class="dropdown-divider"></div>
-											<a class="dropdown-item" href="#">Something else here</a>
+											<div class="dropdown-submenu-header">México</div>
+											<div class="dropdown-submenu-subheader"><a href="#">Liga MX</a></div>
+											<a href="#">Calendario - Apertura</a> /
+											<a href="#">Posiciones - Apertura</a> /
+											<a href="#">Calendario - Clausura</a> /
+											<a href="#">Posiciones - Clausura</a> /
+											<a href="#">Porcentaje</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Liga de Expansión MX</a></div>
+											<a href="#">Calendario - Apertura</a> /
+											<a href="#">Posiciones - Apertura</a> /
+											<a href="#">Posiciones - Clausura</a> /
+											<a href="#">Calendario - Clausura</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Copa MX</a></div>
+											<a href="#">Calendario - Apertura</a> /
+											<a href="#">Calendario - Clausura</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Concachampions</a></div>
+											<a href="#">Calendario</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Mexicanos por el mundo</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Fútbol Femenil</a></div>
 										</div>
 										<div class="dropdown-submenu">
-											<a class="dropdown-item" href="#">Action</a>
-											<a class="dropdown-item" href="#">Another action</a>
-											<div class="dropdown-divider"></div>
-											<a class="dropdown-item" href="#">Something else here</a>
+											<div class="dropdown-submenu-header">Selección</div>
+											<div class="dropdown-submenu-subheader"><a href="#">Selección Mexicana</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Copa Oro</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Mundial 2022</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Mundial Sub 20</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Mundial Sub 17</a></div>
 										</div>
 										<div class="dropdown-submenu">
-											<a class="dropdown-item" href="#">Action</a>
-											<a class="dropdown-item" href="#">Another action</a>
-											<div class="dropdown-divider"></div>
-											<a class="dropdown-item" href="#">Something else here</a>
+											<div class="dropdown-submenu-header">Y además</div>
+											<div class="dropdown-submenu-subheader"><a href="#">Fútbol de estufa</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Balón de Oro</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Mundial de Clubes</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Más Fútbol</a></div>
 										</div>
 									</div>
 								</li>
@@ -102,48 +112,145 @@
 						</div>
 						<div class="bg-wrapper">
 							<div class="container">
-								<li class="nav-item dropdown">
+								<li class="nav-item dropdown position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
 										Fútbol Internacional
 									</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#">Action</a>
-										<a class="dropdown-item" href="#">Another action</a>
-										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Something else here</a>
+									<div class="dropdown-menu mb-3 flex-column flex-sm-row" aria-labelledby="navbarDropdown">
+										<div class="dropdown-submenu">
+											<div class="dropdown-submenu-header">América</div>
+											<div class="dropdown-submenu-subheader"><a href="#">Argentina</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Colombia</a></div>
+											<a href="#">Calendario - Apertura</a> /
+											<a href="#">Posiciones - Apertura</a> /
+											<a href="#">Calendario - Finalización</a> /
+											<a href="#">Posiciones - Finalización</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Chile</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Venezuela</a></div>
+											<a href="#">Calendario - Apertura</a> /
+											<a href="#">Posiciones - Apertura</a> /
+											<a href="#">Calendario - Clausura</a> /
+											<a href="#">Posiciones - Clausura</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Estados Unidos. MLS</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Conmebol Libertadores</a></div>
+											<a href="#">Posiciones</a> /
+											<a href="#">Calendario</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Copa América</a></div>
+										</div>
+										<div class="dropdown-submenu">
+											<div class="dropdown-submenu-header">Europa</div>
+											<div class="dropdown-submenu-subheader"><a href="#">La Liga Santander</a></div>
+											<a href="#">Real Madrid</a> /
+											<a href="#">Barcelona</a> /
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Liga SmartBank</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Premier League</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Ligue 1</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Bundesliga</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Serie A</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Liga Portuguesa</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Champions League</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Europa League</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Posiciones</a> /
+											<a href="#">Equipos</a>
+										</div>
+										<div class="dropdown-submenu">
+											<div class="dropdown-submenu-subheader"><a href="#">Otras ligas ></a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Euro 2020</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">UEFA Nations League</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">International Champions Cup</a></div>
+										</div>
 									</div>
 								</li>
 							</div>
 						</div>
 						<div class="bg-wrapper">
 							<div class="container">
-								<li class="nav-item dropdown">
+								<li class="nav-item dropdown position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
 										Motor
 									</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#">Action</a>
-										<a class="dropdown-item" href="#">Another action</a>
-										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Something else here</a>
+									<div class="dropdown-menu mb-3 flex-column flex-sm-row" aria-labelledby="navbarDropdown">
+										<div class="dropdown-submenu">
+											<div class="dropdown-submenu-header">Motor</div>
+											<div class="dropdown-submenu-subheader"><a href="#">F1</a></div>
+											<a href="#">Calendario</a> /
+											<a href="#">Clasificación</a> /
+											<a href="#">Clasificación carrera</a> /
+											<a href="#">Clasificación constructores</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Nascar</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Más Motor</a></div>
+										</div>
 									</div>
 								</li>
 							</div>
 						</div>
 						<div class="bg-wrapper">
 							<div class="container">
-								<li class="nav-item dropdown mb-lg-0 mb-2">
+								<li class="nav-item dropdown mb-lg-0 mb-2 position-static">
 									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
 										Otros deportes
 									</a>
-									<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#">Action</a>
-										<a class="dropdown-item" href="#">Another action</a>
-										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Something else here</a>
+									<div class="dropdown-menu mb-3 flex-column flex-sm-row" aria-labelledby="navbarDropdown">
+										<div class="dropdown-submenu">
+											<div class="dropdown-submenu-header">Destacados</div>
+											<div class="dropdown-submenu-subheader"><a href="#">Básquetbol</a></div>
+											<a href="#">NBA</a> /
+											<a href="#">Internacional</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Béisbol</a></div>
+											<a href="#">MLB</a> /
+											<a href="#">Béisbol Mexicano</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Boxeo</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Tenis</a></div>
+											<a href="#">Abierto Mexicano</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Motor</a></div>
+											<a href="#">F1</a> /
+											<a href="#">Nascar</a> /
+											<a href="#">Más Motor</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Golf</a></div>
+										</div>
+										<div class="dropdown-submenu">
+											<div class="dropdown-submenu-header">Otros</div>
+											<div class="dropdown-submenu-subheader"><a href="#">Lucha Libre</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">UFC</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">Fútbol Americano</a></div>
+											<a href="#">Super Bowl</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Juegos Olímpicos</a></div>
+											<a href="#">Olympic Channel</a> /
+											<a href="#">Olímpicos</a>
+											<div class="dropdown-submenu-subheader"><a href="#">Deportes con causa</a></div>
+											<div class="dropdown-submenu-subheader"><a href="#">eSports</a></div>
+										</div>
 									</div>
 								</li>
 							</div>
@@ -188,41 +295,58 @@
 	<section class="container-fluid py-3 border-top mt-3" style="border-width: 0.125rem !important; max-width: 1140px;">
 		<div class="row">
 			<div class="col-12 col-md-8">
-				<div class="card m-0 m-md-1" >
+				<div class="card m-0 m-md-1">
 					<img class="card-img-top" src="./assets/images/img1.jpg" alt="Img1">
 					<div class="card-body">
 						<p class="card-title text-danger">Rata conchesumare</p>
-						<a href="#" class="text-dark"><h1>Ir a mamitas puebla</h1></a>
+						<a href="#" class="text-dark">
+							<h1>Ir a mamitas puebla</h1>
+						</a>
 					</div>
 				</div>
 			</div>
 
 			<div class="col-12 col-md-4 d-flex flex-column">
-				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1"style="background-color: #f5f7fa" >
-					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;" src="./assets/images/IMG2.jpg" alt="Img1">
+				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa">
+					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;"
+						src="./assets/images/IMG2.jpg" alt="Img1">
 					<div class="card-body p-0 mr-1">
-						<p class="card-title text-danger font-weight-bold text-uppercase" style="font-size: 0.875rem; font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección Mexicana</p>
-						<a href="#" class="text-dark" ><h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5></a>
+						<p class="card-title text-danger font-weight-bold text-uppercase"
+							style="font-size: 0.875rem; font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección
+							Mexicana</p>
+						<a href="#" class="text-dark">
+							<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5>
+						</a>
 					</div>
 				</div>
-				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa" >
-					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;" src="./assets/images/img3.jpg" alt="Img1">
+				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa">
+					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;"
+						src="./assets/images/img3.jpg" alt="Img1">
 					<div class="card-body p-0 mr-1">
-						<p class="card-title text-danger font-weight-bold text-uppercase" style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección Mexicana</p>
-						<a href="#" class="text-dark" ><h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5></a>
+						<p class="card-title text-danger font-weight-bold text-uppercase"
+							style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección
+							Mexicana</p>
+						<a href="#" class="text-dark">
+							<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5>
+						</a>
 					</div>
 				</div>
-				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa" >
-					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;" src="./assets/images/img4.jpg" alt="Img1">
+				<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa">
+					<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;"
+						src="./assets/images/img4.jpg" alt="Img1">
 					<div class="card-body p-0 mr-1">
-						<p class="card-title text-danger font-weight-bold text-uppercase" style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección Mexicana</p>
-						<a href="#" class="text-dark" ><h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5></a>
+						<p class="card-title text-danger font-weight-bold text-uppercase"
+							style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección
+							Mexicana</p>
+						<a href="#" class="text-dark">
+							<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	
+
 	<section class="container"></section>
 	<section class="container"></section>
 	<section class="container"></section>
