feat: include basic footer section

--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
 						<form class="form-inline d-flex align-items-center justify-content-end position-relative">
 							<input class="form-control rounded-0 search-input" type="search" placeholder="Buscar en marca.com"
 								aria-label="Search">
-							<svg class="position-absolute" style="cursor: pointer; right: 0.25rem;" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="1.5rem" height="1.5rem" viewBox="0 0 30 30"
-								style=" fill:#000000;">
+							<svg class="position-absolute" style="cursor: pointer; right: 0.25rem;" xmlns="http://www.w3.org/2000/svg"
+								x="0px" y="0px" width="1.5rem" height="1.5rem" viewBox="0 0 30 30" style=" fill:#000000;">
 								<path
 									d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z">
 								</path>
@@ -285,31 +285,49 @@
 						<button class="btn btn-login py-1 fs-md-1 rounded-0" style="width: 100%;">Iniciar sesión</button>
 						<button class="btn btn-subscribe py-1 rounded-0" style="width: 100%;">Suscribete</button>
 					</div>
-					</div>
 				</div>
+			</div>
 			</div>
 		</nav>
 		<div class="nav-teams py-2" style="background-color: #eceff4;">
 			<div class="container">
 				<ul class="m-0 p-0 row align-items-center justify-content-center">
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/1.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/2.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/3.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/4.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/5.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/6.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/7.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/8.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/9.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/10.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/11.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/12.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/13.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/14.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/15.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/16.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/17.png" alt=""></a></li>
-					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img src="./assets/logos/18.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/1.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/2.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/3.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/4.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/5.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/6.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/7.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/8.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/9.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/10.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/11.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/12.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/13.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/14.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/15.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/16.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/17.png" alt=""></a></li>
+					<li class="p-0 col" style="min-width: max-content; max-width: calc(100% / 12);"><a href="#"><img
+								src="./assets/logos/18.png" alt=""></a></li>
 				</ul>
 			</div>
 		</div>
@@ -377,7 +395,60 @@
 	<section class="container"></section>
 	<section class="container"></section>
 
-
+	<footer>
+		<div style="background-color: #eceff4;">
+			<div class="container pt-2 pb-4" style="font-size: 0.875rem;">
+				<ul class="footer-links p-0 text-center" style="list-style-type: none;">
+					<li class="font-weight-bold my-2">© Septiembre 2022 Unidad Editorial Información Deportiva, S.L.U. Todos los
+						derechos reservados.</li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Política de cookies</a></li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Configuración de cookies</a></li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Política de privacidad</a></li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Términos y condiciones de uso</a>
+					</li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Certificado por OJD</a></li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Contacto</a></li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Publicidad</a></li>
+					<li class="d-inline mr-2 mb-2"><a style="color: var(--clr-dark);" href="#">Ayuda</a></li>
+				</ul>
+				<div class="social-networks">
+					<p class="font-weight-bold text-center">Síguenos en</p>
+					<ul class="p-0 d-flex align-items-center justify-content-center" style="list-style-type: none; gap: 1rem;">
+						<li>
+							<a class="d-flex align-items-center justify-content-center" style="border-radius: 50%; width: 40px; height: 40px; background-color: #3b5998;" href="#">
+								<svg xmlns="http://www.w3.org/2000/svg" width="36" height="32" viewBox="-4 -2 36 32" aria-hidden="true" role="img">
+									<path opacity=".5" fill="none" d="M0 0h28v28H0V0z"></path>
+									<path fill="white"
+										d="M15.22 21.875V14.69h2.415l.359-2.798H15.22v-1.789c0-.809.225-1.363 1.387-1.363h1.485V6.234a19.48 19.48 0 00-2.16-.109c-2.141 0-3.601 1.308-3.601 3.705v2.068H9.909v2.799h2.421v7.178h2.89z">
+									</path>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="d-flex align-items-center justify-content-center" style="border-radius: 50%; width: 40px; height: 40px; background-color: #55acee;" href="#">
+								<svg xmlns="http://www.w3.org/2000/svg" width="36" height="32" viewBox="-4 -2 36 32" role="img" aria-hidden="true">
+									<path opacity=".5" fill="none" d="M0,0h28v28H0V0z"></path>
+									<path fill="white"
+										d="M20.807,10.413c0.007,0.149,0.01,0.304,0.011,0.454c0.032,4.659-3.471,10.048-9.955,10.094 c-1.914,0.014-3.792-0.522-5.41-1.545c0.278,0.028,0.558,0.044,0.84,0.042c1.587-0.009,3.125-0.551,4.368-1.537 c-1.508-0.019-2.837-0.993-3.311-2.424c0.216,0.04,0.438,0.059,0.663,0.057c0.32,0,0.649-0.044,0.948-0.128 c-1.647-0.317-2.836-1.759-2.835-3.436v-0.042c0.438,0.259,1.004,0.414,1.58,0.428c-1.558-1.021-2.054-3.077-1.135-4.697 c1.803,2.189,4.451,3.509,7.284,3.633c-0.458-1.89,0.702-3.793,2.592-4.252c0.265-0.064,0.536-0.097,0.808-0.099 c0.975-0.008,1.909,0.388,2.581,1.094c0.789-0.159,1.544-0.454,2.233-0.871c-0.259,0.818-0.806,1.515-1.54,1.96 c0.698-0.085,1.379-0.276,2.019-0.569C22.082,9.287,21.492,9.909,20.807,10.413z">
+									</path>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="d-flex align-items-center justify-content-center" style="border-radius: 50%; width: 40px; height: 40px; background-color: #d96d00;" href="#">
+								<svg xmlns="http://www.w3.org/2000/svg" fill="white" width="18" height="22" viewBox="0 0 21.684 21.835">
+									<path
+										d="M5.826 18.922a2.913 2.913 0 11-5.826 0 2.913 2.913 0 015.826 0M0 7.402v4.028s9.778.273 10.082 10.405h4.306S14.894 8.065 0 7.402">
+									</path>
+									<path d="M0 0v4.103s15.908-.253 17.68 17.732h4.003S22.139 1.215 0 0"></path>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
