--- a/index.html
+++ b/index.html
@@ -332,7 +332,45 @@
 			</div>
 		</div>
 	</header>
-
+	<section class="container mt-4" style="box-shadow: 0 -4px 8px 2px var(--clr-light);">
+		<div class="row">
+			<div
+				class="col-3 col-lg-2 bg-light d-flex flex-column align-items-center justify-content-center"
+				style="border-right: 0.25rem solid var(--clr-light);"
+			>
+				<span class="font-weight-bold" style="font-size: 0.825rem">Resultados:</span>
+				<select class="custom-select">
+					<option>Todos</option>
+					<option>Fútbol</option>
+					<option>UEFA Nations League</option>
+					<option>Liga Argentina</option>
+					<option>Fútbol Americano</option>
+					<option>NFL</option>
+				</select>
+			</div>
+			<div class="col-9 col-lg-10 bg-light d-flex align-items-center" style="gap: 0.375rem;">
+				<div class="card bg-light mb-3" style="min-width: 12rem; border-radius: 0.25rem; border-top: 1px solid var(--clr-dark);">
+					<div class="text-center text-uppercase pt-2" style="font-size: 0.75rem; font-weight: 300;">Finalizado</div>
+					<div class="card-body d-flex flex-column p-2" style="font-size: 0.825rem;">
+						<div class="d-flex justify-content-between align-items-center">
+							<p class="d-flex align-items-center justify-content-start m-0">
+								<img src="./assets/flags/1.png" class="mr-2" style="height: 1.25rem; width: auto;">
+								<a href="#" style="text-decoration: none;">San Marino</a>
+							</p>
+							<span style="font-size: 1.25rem; background-color: var(--clr-light); padding: 0.25rem;">0</span>
+						</div>
+						<div class="d-flex justify-content-between align-items-center">
+							<p class="d-flex align-items-center justify-content-start m-0">
+								<img src="./assets/flags/2.png" class="mr-2" style="height: 1.25rem; width: auto;">
+								<a href="#" style="text-decoration: none;">Estonia</a>
+							</p>
+							<span class="font-weight-bold" style="font-size: 1.25rem; background-color: var(--clr-light); padding: 0.25rem;">4</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<main>
 		<section class="container-fluid py-3 border-top mt-3" style="border-width: 0.125rem !important; max-width: 1140px;">
 			<div class="row">
@@ -347,7 +385,7 @@
 						</div>
 					</div>
 				</div>
-	
+
 				<div class="col-12 col-md-4 d-flex flex-column">
 					<div class="card m-0 m-md-1 flex-row p-2 flex-grow-1" style="background-color: #f5f7fa">
 						<img class="card-img-top order-2 align-self-start" style="width: 40%; height: auto;"
@@ -357,7 +395,8 @@
 								style="font-size: 0.875rem; font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección
 								Mexicana</p>
 							<a href="#" class="text-dark">
-								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5>
+								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?
+								</h5>
 							</a>
 						</div>
 					</div>
@@ -369,7 +408,8 @@
 								style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección
 								Mexicana</p>
 							<a href="#" class="text-dark">
-								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5>
+								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?
+								</h5>
 							</a>
 						</div>
 					</div>
@@ -381,14 +421,15 @@
 								style="font-size: 0.875rem;font-family: Barlow Semi Condensed,Arial,Helvetica,sans-serif;">Selección
 								Mexicana</p>
 							<a href="#" class="text-dark">
-								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?</h5>
+								<h5 style="word-break: break-all;">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, velit?
+								</h5>
 							</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-	
+
 		<section class="container"></section>
 		<section class="container"></section>
 		<section class="container"></section>
@@ -399,7 +440,8 @@
 	<footer class="footer">
 		<div class="pt-3 pb-4" style="background-color: var(--clr-dark);">
 			<div class="container">
-				<p class="text-white pb-2 text-center font-weight-bold" style="border-bottom: 1px solid white;">Otras web de Unidad Editorial</p>
+				<p class="text-white pb-2 text-center font-weight-bold" style="border-bottom: 1px solid white;">Otras web de
+					Unidad Editorial</p>
 				<nav class="justify-content-between footer-navbar">
 					<div class="text-white">
 						<p class="font-weight-bold">Marca</p>
